--- a/app/src/main/res/layout/add_new_task_list_item.xml
+++ b/app/src/main/res/layout/add_new_task_list_item.xml
@@ -14,6 +14,7 @@
         android:padding="18dp"
         android:text="List item"
         android:textSize="19sp"
+        android:textColor="@color/black"
 
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
