--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -37,6 +37,16 @@
         >
 
         <TextView
+            android:id="@+id/txt_home_user_name"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:textSize="40sp"
+            />
+
+        <TextView
             android:id="@+id/txt_home_user_points"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
