--- a/app/src/main/res/layout/fragment_task_added.xml
+++ b/app/src/main/res/layout/fragment_task_added.xml
@@ -37,10 +37,21 @@
         >
 
         <TextView
+            android:id="@+id/txt_total_points"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:textAlignment="center"
+
+            />
+
+        <TextView
             android:id="@+id/txt_points_earned"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
@@ -53,7 +64,6 @@
             android:id="@+id/txt_current_level"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-
             android:textSize="24sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
