--- a/app/src/main/res/layout/fragment_list_recorded_tasks.xml
+++ b/app/src/main/res/layout/fragment_list_recorded_tasks.xml
@@ -8,8 +8,22 @@
 
     >
 
+<!--    create a recycler view where the recorded task list
+item will populate the fragment data -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_recorded_tasks_list"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        />
+
     <TextView
-        android:id="@+id/text_list_rec_tasks"
+        android:id="@+id/recorded_task_no_data_msg"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
