added empty event listener for buttons on rec task

--- a/app/src/main/res/layout/recorded_task_list_item.xml
+++ b/app/src/main/res/layout/recorded_task_list_item.xml
@@ -7,6 +7,7 @@
     android:layout_height="wrap_content"
     android:paddingHorizontal="8dp"
     android:paddingVertical="12dp"
+    android:id="@+id/lo_recorded_task_item__root"
     >
 
 <!--    the max limit of characters in this text view should be 35
