--- a/app/src/main/res/layout/fragment_list_recorded_tasks.xml
+++ b/app/src/main/res/layout/fragment_list_recorded_tasks.xml
@@ -31,6 +31,7 @@ item will populate the fragment data -->
         android:layout_marginEnd="8dp"
         android:textAlignment="center"
         android:textSize="20sp"
+        android:text="@string/title_recorded_tasks_no_data_msg"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
