--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -62,6 +62,61 @@
 
             />
 
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:layout_marginBottom="10dp"
+            android:textColor="@color/red"
+            android:visibility="gone"
+            android:id="@+id/txt_profile_deleteMsg"
+            />
+
+
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center"
+            android:id="@+id/ll_profile_delete_last_week_entries_buttons"
+            android:visibility="gone"
+            >
+            <Button
+                android:id="@+id/btn_profile_delete_last_week_entries_no"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="No"
+                android:textSize="18sp"
+                android:layout_marginVertical="45dp"
+                android:paddingHorizontal="18dp"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp"
+                android:textColor="@color/white"
+                android:theme="@style/Widget.Material3.Button.TextButton"
+                app:backgroundTint="@color/navy"
+                android:layout_marginHorizontal="6dp"
+
+                />
+            <Button
+                android:id="@+id/btn_profile_delete_last_week_entries_yes"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Yes"
+                android:textSize="18sp"
+                android:layout_marginVertical="45dp"
+                android:paddingHorizontal="18dp"
+                android:paddingTop="12dp"
+                android:paddingBottom="12dp"
+                android:textColor="@color/white"
+                android:theme="@style/Widget.Material3.Button.TextButton"
+                app:backgroundTint="@color/red"
+                android:layout_marginHorizontal="6dp"
+
+                />
+
+        </LinearLayout>
+
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
